// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}
generator client {
  provider = "prisma-client-js"
}

model User {
    id    Int    @id @default(autoincrement())
    name  String
    lists List[]
    tasks Task[]
}

model List {
    id     Int    @id @default(autoincrement())
    userId Int
    name   String
    tasks  Task[]

    user   User   @relation(fields: [userId], references: [id])
}

model Task {
    id          Int      @id @default(autoincrement())
    userId      Int
    listId      Int
    name        String
    description String
    deadline    DateTime
    isAction    Boolean
    priority    Priority

    user        User     @relation(fields: [userId], references: [id])
    list        List     @relation(fields: [listId], references: [id])
}

enum Priority {
    high
    medium
    low
}